fixed z-index

--- a/src/sass/components/_form.scss
+++ b/src/sass/components/_form.scss
@@ -8,33 +8,32 @@ body.scroll-hidden {
   overflow: hidden;
 }
 
-.form-signin-heading{
+.form-signin-heading {
   text-align: center;
 }
-.errorMessage{
-    font-size: 16px;
-    font-weight: 700;
-    text-align: center;
+.errorMessage {
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
 }
-.btn-block{
-    margin: 10px 0;
-    width: 100%;
-    top:50%;
-    background-color:#27272d97;
-    color: #fff;
-    border:none; 
-    border-radius:10px; 
-    padding:15px;
-    min-height:25px; 
-    min-width: 120px;
+.btn-block {
+  margin: 10px 0;
+  width: 100%;
+  top: 50%;
+  background-color: #27272d97;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  padding: 15px;
+  min-height: 25px;
+  min-width: 120px;
 }
 .btn-block:hover,
 .btn-block:focus {
   background-color: #ffbf00;
-
 }
 .btn-block.out.active {
-  z-index: 100;
+  z-index: 20;
   position: absolute;
   top: 0;
   left: 50%;
@@ -46,110 +45,104 @@ body.scroll-hidden {
   color: orangered;
   cursor: pointer;
 }
-.btn-block.autorization.active{
-    z-index: 100;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 100px;
-    transform: translate(-50%);
-    background-color: black;
-    border-radius: 10px;
-    border-color: 2px solid yellow;
-    color: yellow;
-    cursor: pointer;
+.btn-block.autorization.active {
+  z-index: 100;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 100px;
+  transform: translate(-50%);
+  background-color: black;
+  border-radius: 10px;
+  border-color: 2px solid yellow;
+  color: yellow;
+  cursor: pointer;
 }
 .form-signin.active {
-
-    z-index: 40;
-    display: flex;
-    -moz-box-shadow: 6px 7px 39px 11px #fff;
--webkit-box-shadow: 6px 7px 39px 11px #fff;
-box-shadow: 6px 7px 39px 11px #fff;
-
-
+  z-index: 40;
+  display: flex;
+  -moz-box-shadow: 6px 7px 39px 11px #fff;
+  -webkit-box-shadow: 6px 7px 39px 11px #fff;
+  box-shadow: 6px 7px 39px 11px #fff;
 }
 .backdropForm {
   opacity: 0;
 }
 .backdropForm.active {
-
-    z-index: 30;
-    width: 100vw;
-    height: 100vh;
-    opacity: 1;
-    overflow: overlay;
-    background-color: #fffffff2;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: block;
-    background-image: url('../images/background_for_form.webp');
-    background-size: cover;
-    background-position: center;
+  z-index: 30;
+  width: 100vw;
+  height: 100vh;
+  opacity: 1;
+  overflow: overlay;
+  background-color: #fffffff2;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: block;
+  background-image: url('../images/background_for_form.webp');
+  background-size: cover;
+  background-position: center;
 }
 
 .form-signin {
-    position: fixed;
-    display: none;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-    max-width: 380px;
-    padding: 15px 35px 45px;
-    margin: 0 auto;
-    background-color: #fff;
-    border: 1px solid rgba(0,0,0,0.1);  
-    border-radius: 10px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
+  position: fixed;
+  display: none;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 380px;
+  padding: 15px 35px 45px;
+  margin: 0 auto;
+  background-color: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   .form-signin-heading {
     margin-bottom: 30px;
   }
 
-
-	.form-control-mail,
+  .form-control-mail,
   .form-control-password {
-	  position: relative;
-	  height: auto;
-	  padding: 10px;
+    position: relative;
+    height: auto;
+    padding: 10px;
     margin: 10px 0;
     width: 100%;
-    background-color:#fff;
+    background-color: #fff;
     color: #000;
-    border:none; 
-    border-radius:10px; 
-    padding:15px;
-    min-height:25px; 
+    border: none;
+    border-radius: 10px;
+    padding: 15px;
+    min-height: 25px;
     min-width: 120px;
     outline: 3px ridge rgba(244, 166, 41, 0.9);
-		
+
     &:focus {
-		  z-index: 2;
-		}
-    &:hover {
-    background-color: #ffbf00;;
+      z-index: 2;
     }
-	}
+    &:hover {
+      background-color: #ffbf00;
+    }
+  }
 
-	input[type="text"] {
-	  margin-bottom: -1px;
-	}
+  input[type='text'] {
+    margin-bottom: -1px;
+  }
 
-	input[type="password"] {
-	  margin-bottom: 20px;
-	}
+  input[type='password'] {
+    margin-bottom: 20px;
+  }
 }
 .form__close-icone,
 .form__close-icone-inner {
   width: 17px;
   height: 17px;
   cursor: pointer;
-  transition: scale .25s linear;
+  transition: scale 0.25s linear;
   position: absolute;
   top: 15px;
   right: 15px;
@@ -161,31 +154,30 @@ box-shadow: 6px 7px 39px 11px #fff;
   border: none;
 }
 
-@media screen and (max-width: $tablet) { 
-	.form-control-mail,
-  .form-control-password{
-      font-size: 16px;
-    }
+@media screen and (max-width: $tablet) {
+  .form-control-mail,
+  .form-control-password {
+    font-size: 16px;
+  }
 }
-@media screen and (min-width: $tablet) and (max-width: $desctop) { 
-	.form-control-mail,
-  .form-control-password{
-      font-size: 22px;
-    }
+@media screen and (min-width: $tablet) and (max-width: $desctop) {
+  .form-control-mail,
+  .form-control-password {
+    font-size: 22px;
+  }
   .form-signin {
     max-width: 680px;
     min-width: 500px;
   }
 }
 
-@media screen and (min-width: $desctop) { 
-	.form-control-mail,
+@media screen and (min-width: $desctop) {
+  .form-control-mail,
   .form-control-password {
-      font-size: 24px;
-    }
-    .form-signin {
+    font-size: 24px;
+  }
+  .form-signin {
     max-width: 880px;
     min-width: 600px;
-    }
+  }
 }
-
