--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -2,6 +2,7 @@
 
 .backdrop {
   position: fixed;
+  z-index: 45;
   top: 0;
   left: 0;
   width: 100vw;
