--- a/src/sass/components/_trailers.scss
+++ b/src/sass/components/_trailers.scss
@@ -1,6 +1,6 @@
 .modal__trailer {
   position: absolute;
-  z-index: 35;
+  z-index: 55;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
